# bar

./: .gitignore  DzenParse.hs  Icon.hs  Makefile  README.md  Timer.hs  Top.hs  Utils.hs  Xpm.hs  bar.cabal  bar.hs  bar2.hs  clock.sh  dzen-info.py  dzen.hs  dzen.sh  dzen2.i686  dzen2.x86_64  geticon.cc  lower.cc  tray.sh  xmonad.hs  xsession.sh
src/: DzenParse.hs  Icon.hs  Main.hs  Timer.hs  Top.hs
