-- Configuration and dependencies for bar

name:                bar

version:             0.1.0.0

synopsis:            IceWM like bar for XMonad

description:         IcwWM like bar for XMonad with build in support for
                     some system graphs like CPU top, memory usage, network
                     and battery.  For configuration options change Main.hs

homepage:            https://github.com/ivanvolosyuk/bar

license:             BSD3

license-file:        LICENSE

author:              Ivan Volosyuk

maintainer:          Ivan.Volosyuk@gmail.com

category:            System

build-type:          Simple

extra-source-files:  ChangeLog.md

cabal-version:       >=1.10

executable bar
  main-is:             Main.hs
  
  
  other-extensions:    Arrows, DeriveGeneric, DeriveAnyClass, LambdaCase

  ghc-options:         -threaded -O2 -funfolding-use-threshold=16 -optc-O3 -fexcess-precision 
  
  build-depends:       base >=4.9 && <4.10
                      ,containers
                      ,bytestring
                      ,directory
                      ,X11
                      ,time
                      ,auto
                      ,deepseq
                      ,parsec
                      ,X11-xft
                      ,tz
                      ,process
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010
  
